--- a/MyCity4Kids/MyCity4Kids/res/layout/add_collection_name_pop_up.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_collection_name_pop_up.xml
@@ -34,18 +34,29 @@
             android:layout_marginTop="15dp"
             android:layout_marginEnd="@dimen/space_16"
             android:background="@drawable/dark_border_rounded_corner"
+            android:digits="abcdefghijklmnopqrstuvwxyz1234567890 "
             android:gravity="center_vertical"
             android:hint="eg: My top 10 blogs"
-            android:maxLength="100"
+            android:maxLength="65"
             android:padding="@dimen/space_10"
             android:textColor="@color/campaign_4A4A4A"
             android:textSize="@dimen/space_16" />
 
         <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/confirmTextView"
+            android:id="@+id/charLimitTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/collectionNameEditTextView"
+            android:layout_marginStart="@dimen/space_16"
+            android:layout_marginTop="@dimen/space_7"
+            android:text=" maximum supported length is 65"
+            android:textColor="@color/gray2" />
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/confirmTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/charLimitTextView"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="@dimen/space_16"
             android:layout_marginBottom="@dimen/space_30"
