--- a/MyCity4Kids/MyCity4Kids/res/layout/badge_item_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/badge_item_cell.xml
@@ -7,31 +7,24 @@
     android:background="@drawable/campaign_border_round_rectangular_layout">
 
 
-    <com.mikhaellopez.circularimageview.CircularImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/badgeImageView"
         android:layout_width="@dimen/space_115"
         android:layout_height="@dimen/space_115"
         android:layout_centerHorizontal="true"
-        android:contentDescription="@string/author_img"
-        android:src="@drawable/default_commentor_img"
         android:layout_marginTop="@dimen/space_10"
-        android:visibility="visible"
-        app:civ_border="true"
-        app:civ_border_color="@color/red_drawer_selected"
-        app:civ_border_width="0dp"
-        app:civ_shadow="true"
-        app:civ_shadow_color="@color/grey"
-        app:civ_shadow_radius="4" />
+        android:contentDescription="@string/author_img"
+        android:visibility="visible" />
 
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/badgeName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/space_10"
-        android:layout_marginBottom="@dimen/space_16"
         android:layout_below="@id/badgeImageView"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/space_10"
+        android:layout_marginBottom="@dimen/space_16"
         android:textColor="@color/campaign_4A4A4A"
         android:textSize="14sp"
         app:fontName="open_sans.ttf" />
