--- a/MyCity4Kids/MyCity4Kids/res/layout/bottom_loading_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/bottom_loading_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLoadingView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,8 +7,7 @@
     android:layout_gravity="bottom"
     android:background="#80000000"
     android:paddingBottom="5dp"
-    android:visibility="gone"
-    tools:showIn="@layout/m_private_profile_activity">
+    android:visibility="gone">
 
     <View
         android:id="@+id/sepaartorView"
