--- a/MyCity4Kids/MyCity4Kids/res/layout/badge_dialog_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/badge_dialog_fragment.xml
@@ -1,51 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rootLayout"
     android:layout_width="320dp"
     android:layout_height="wrap_content"
     android:background="@drawable/custom_dialog_bg"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/imagesContainer"
+    <LinearLayout
+        android:id="@+id/sharableCardContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:orientation="vertical">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/badgeBgImageView"
-            android:layout_width="250dp"
-            android:layout_height="200dp"
-            android:layout_centerHorizontal="true"
-            android:scaleType="fitXY" />
+        <RelativeLayout
+            android:id="@+id/imagesContainer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/badgeImageView"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_centerInParent="true"
-            android:scaleType="fitXY" />
-    </RelativeLayout>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/badgeBgImageView"
+                android:layout_width="250dp"
+                android:layout_height="200dp"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/confetti"
+                android:scaleType="fitXY" />
 
-    <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/badgeTitleTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imagesContainer"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="10dp"
-        android:gravity="center"
-        android:text="Congratulations"
-        android:textColor="@color/color_465391"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/badgeImageView"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_centerInParent="true"
+                android:scaleType="fitXY" />
+        </RelativeLayout>
+
+        <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/badgeTitleTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="10dp"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/color_465391"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/badgeDescTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/badgeTitleTextView"
+        android:layout_below="@+id/sharableCardContainer"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
