--- a/MyCity4Kids/MyCity4Kids/res/layout/follower_following_list_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/follower_following_list_activity.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:text="@string/subscribe_topics.toolbar.title"
+                android:text="@string/myprofile.followers_label"
                 android:textColor="@color/subscribe_topics.toolbar.title"
                 android:textSize="20sp"
                 app:fontName="oswald_regular.ttf" />
@@ -63,4 +63,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/toolbarUnderline" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/collectionFollowFollowingListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/toolbarUnderline"
+        android:visibility="gone" />
 </RelativeLayout>
