--- a/MyCity4Kids/MyCity4Kids/res/layout/challenge_listing_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/challenge_listing_adapter.xml
@@ -213,7 +213,7 @@
                     android:paddingLeft="8dp"
                     android:paddingRight="8dp"
                     android:paddingTop="12dp"
-                    android:src="@drawable/ic_share_white"
+                    android:src="@drawable/collectionadd"
                     android:tint="@color/app_red" />
 
                 <LinearLayout
